; ModuleID = '/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_codebook.c_bitreverse.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_codebook.c_bitreverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bitreverse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bitreverse(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = ashr i32 %3, 16
  %5 = and i32 %4, 65535
  %6 = load i32, i32* %2, align 4
  %7 = shl i32 %6, 16
  %8 = and i32 %7, -65536
  %9 = or i32 %5, %8
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = ashr i32 %10, 8
  %12 = and i32 %11, 16711935
  %13 = load i32, i32* %2, align 4
  %14 = shl i32 %13, 8
  %15 = and i32 %14, -16711936
  %16 = or i32 %12, %15
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %2, align 4
  %18 = ashr i32 %17, 4
  %19 = and i32 %18, 252645135
  %20 = load i32, i32* %2, align 4
  %21 = shl i32 %20, 4
  %22 = and i32 %21, -252645136
  %23 = or i32 %19, %22
  store i32 %23, i32* %2, align 4
  %24 = load i32, i32* %2, align 4
  %25 = ashr i32 %24, 2
  %26 = and i32 %25, 858993459
  %27 = load i32, i32* %2, align 4
  %28 = shl i32 %27, 2
  %29 = and i32 %28, -858993460
  %30 = or i32 %26, %29
  store i32 %30, i32* %2, align 4
  %31 = load i32, i32* %2, align 4
  %32 = ashr i32 %31, 1
  %33 = and i32 %32, 1431655765
  %34 = load i32, i32* %2, align 4
  %35 = shl i32 %34, 1
  %36 = and i32 %35, -1431655766
  %37 = or i32 %33, %36
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
